<resources>
    <string name="app_name">burak-isik-odev4</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Login</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="company">Company</string>
    <string name="slogan">Do Only Your Best</string>
    <string name="loginToAccount">Login To Your Account</string>
    <string name="orContinueWith">Or Continue With</string>
    <string name="facebook">Facebook</string>
    <string name="google">Google</string>
    <string name="forgotPassword">Forgot Your Password?</string>
    <string name="addressTitle">Home</string>
    <string name="address">Etlik ST Ankara, Turkey</string>
    <string name="popularRestaurants">Popular Restaurants</string>
    <string name="navHome">Home</string>
    <string name="navSearch">Search</string>
    <string name="navBasket">Basket</string>
    <string name="navAccount">Account</string>
    <string name="food">food</string>
    <string name="restaurantName">Kebabcı</string>
    <string name="type">Türkiye</string>
    <string name="deliveryTime">30 min</string>
    <string name="star">5.0</string>
    <string name="discountRate">50% OFF</string>
</resources>