<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".ui.login.LoginActivity">

    <ImageView
        android:id="@+id/logo"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginTop="16dp"
        android:src="@drawable/ic_launcher_foreground"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/company"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/company"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="@id/logo"
        app:layout_constraintStart_toStartOf="@id/logo"
        app:layout_constraintTop_toBottomOf="@id/logo" />

    <TextView
        android:id="@+id/slogan"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:text="@string/slogan"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="@id/logo"
        app:layout_constraintStart_toStartOf="@id/logo"
        app:layout_constraintTop_toBottomOf="@id/company" />

    <TextView
        android:id="@+id/loginToAccount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="72dp"
        android:fontFamily="sans-serif"
        android:text="@string/loginToAccount"
        android:textColor="#09051C"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="@id/logo"
        app:layout_constraintStart_toStartOf="@id/logo"
        app:layout_constraintTop_toBottomOf="@id/slogan" />
        <!-- TODO: CHANGE FONT FAMILY-->

    <EditText
        android:id="@+id/username"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="96dp"
        android:background="@drawable/et_style"
        android:hint="@string/prompt_email"
        android:inputType="textEmailAddress"
        android:paddingStart="16dp"
        android:paddingTop="8dp"
        android:paddingEnd="8dp"
        android:paddingBottom="8dp"
        android:selectAllOnFocus="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/loginToAccount" />

    <EditText
        android:id="@+id/password"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@drawable/et_style"
        android:hint="@string/prompt_password"
        android:imeActionLabel="@string/action_sign_in_short"
        android:imeOptions="actionDone"
        android:inputType="textPassword"
        android:paddingStart="16dp"
        android:paddingTop="8dp"
        android:paddingEnd="8dp"
        android:paddingBottom="8dp"
        android:selectAllOnFocus="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/username" />

    <TextView
        android:id="@+id/orContinueWith"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:fontFamily="sans-serif"
        android:text="@string/orContinueWith"
        android:textColor="#09051C"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="@id/password"
        app:layout_constraintStart_toStartOf="@id/password"
        app:layout_constraintTop_toBottomOf="@id/password" />

    <Button
        android:id="@+id/loginWithFacebook"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:drawableLeft="@drawable/ic_launcher_foreground"
        android:text="@string/facebook"
        app:layout_constraintEnd_toStartOf="@id/loginWithGoogle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/orContinueWith" />

    <Button
        android:id="@+id/loginWithGoogle"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginStart="16dp"
        android:drawableLeft="@drawable/ic_launcher_foreground"
        android:text="@string/google"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/loginWithFacebook"
        app:layout_constraintTop_toTopOf="@id/loginWithFacebook" />


    <TextView
        android:id="@+id/forgotYourPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:fontFamily="sans-serif"
        android:text="@string/forgotPassword"
        android:textColor="#09051C"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="@id/orContinueWith"
        app:layout_constraintStart_toStartOf="@id/orContinueWith"
        app:layout_constraintTop_toBottomOf="@id/loginWithFacebook" />

    <Button
        android:id="@+id/login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:layout_marginTop="32dp"
        android:enabled="false"
        android:text="@string/action_sign_in"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@id/orContinueWith"
        app:layout_constraintStart_toStartOf="@id/orContinueWith"
        app:layout_constraintTop_toBottomOf="@+id/forgotYourPassword"
        app:layout_constraintVertical_bias="0.2" />

    <ProgressBar
        android:id="@+id/loading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="64dp"
        android:layout_marginBottom="64dp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/password"
        app:layout_constraintStart_toStartOf="@+id/password"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.3" />

</androidx.constraintlayout.widget.ConstraintLayout>