<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="@dimen/activity_vertical_margin">

    <ImageView
        android:id="@+id/location"
        android:layout_width="32dp"
        android:layout_height="32dp"
        android:layout_marginStart="@dimen/activity_horizontal_margin"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:layout_marginEnd="@dimen/activity_horizontal_margin"
        android:src="@drawable/ic_baseline_add_location"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/addressTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/activity_horizontal_margin"
        android:text="@string/addressTitle"
        android:textColor="#18172B"
        android:textSize="16sp"
        app:layout_constraintStart_toEndOf="@id/location"
        app:layout_constraintTop_toTopOf="@id/location" />

    <TextView
        android:id="@+id/address"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/address"
        android:textColor="#6E80B0"
        android:textSize="@dimen/textview_text_size_small"
        app:layout_constraintBottom_toBottomOf="@id/location"
        app:layout_constraintStart_toStartOf="@id/addressTitle"
        app:layout_constraintTop_toBottomOf="@id/addressTitle" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvFoodType"
        android:layout_width="0dp"
        android:layout_height="75dp"
        android:layout_marginTop="@dimen/activity_vertical_margin_huge"
        android:orientation="horizontal"
        android:paddingStart="@dimen/activity_horizontal_margin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/address"
        tools:ignore="RtlSymmetry"
        tools:listitem="@layout/item_food_type" />

    <TextView
        android:id="@+id/popularRestaurants"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/activity_horizontal_margin"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:text="@string/popularRestaurants"
        android:textColor="#18172B"
        android:textSize="@dimen/textview_text_size"
        app:layout_constraintStart_toStartOf="@id/rvFoodType"
        app:layout_constraintTop_toBottomOf="@id/rvFoodType" />

    <ImageView
        android:id="@+id/settings"
        android:layout_width="32dp"
        android:layout_height="32dp"
        android:layout_marginEnd="@dimen/activity_horizontal_margin"
        android:src="@drawable/ic_settings"
        app:layout_constraintEnd_toEndOf="@id/rvFoodType"
        app:layout_constraintTop_toTopOf="@id/popularRestaurants" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/restaurants"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="@dimen/activity_vertical_margin_huge"
        android:paddingStart="@dimen/activity_horizontal_margin"
        app:layout_constraintBottom_toTopOf="@+id/bottomNavigationView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/popularRestaurants"
        tools:ignore="RtlSymmetry" />

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottomNavigationView"
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:menu="@menu/bottom_nav_menu" />

</androidx.constraintlayout.widget.ConstraintLayout>